# sceneframe

./: .env.example  .gitignore  README.md  hf_upload_folder.py  pyproject.toml  rule34_download_images_by_tags2.py  upload_dataset.py
docs/plans/: 2026-03-22-sceneframe-rewrite.md
src/dataset_maker/: __init__.py  classifier.py  cli.py  config.py  organizer.py  segmenter.py
src/sceneframe/: cleaner.py  cli.py  depth.py  detector.py  extractor.py  smart_filter.py
tests/: test_cleaner.py  test_detector.py  test_extractor.py
