[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sceneframe"
version = "0.2.0"
description = "Detect video scenes and extract frame pairs for model training"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "scenedetect[opencv]>=0.6",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "tqdm>=4.66",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "transformers>=4.40",
    "Pillow>=10.0",
    "transnetv2-pytorch>=1.0",
]

[project.scripts]
sceneframe = "sceneframe.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sceneframe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
